// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dest basic 1`] = `
Array [
  "a",
  "a/b",
  "a/b.js",
  "a/b/c.js",
  "d.js",
]
`;

exports[`dest ignore 1`] = `
Array [
  "a",
  "a/b",
  "a/b/c.js",
]
`;

exports[`dest rename 1`] = `
Array [
  "A",
  "A/b",
  "A/b.ts",
  "A/b/c.ts",
  "d.ts",
]
`;
